2007-11-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-use-japanese-menu): Default to nil for XEmacs 21.4 and
	SXEmacs.
	(w3m-link-map): New variable.
	(w3m-fontify-anchors): Add menu to links.
	(w3m-read-file-name): Don't use default file name if it is "".
	(w3m-link-menu): Define.

2007-11-06  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-redisplay-with-charset): Strip first 'about://source/'
	before setf w3m-arrived-content-charset.
	(w3m-redisplay-and-reset): Ditto.

2007-11-05  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-filter.el (w3m-filter-rules): Add rule for the site of imepita.
	(w3m-filter-imepita): New function.

2007-11-03  David Hansen  <david.hansen@gmx.net>

	* w3m-proc.el (w3m-process-wait-process): Preserve the current buffer
	\(work around an Emacs bug\).

2007-11-03  David Hansen  <david.hansen@gmx.net>

	* w3m.el (w3m-relationship-oddmuse-estimate): Follow new page layout.

2007-11-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-ucs-to-char): Alias to unicode-to-char, ucs-to-char,
	or int-to-char.

	* w3m-ems.el (w3m-ucs-to-char): Always define it.

	* w3m.el (w3m-ucs-to-char): Abolish.

2007-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-module-list): Don't compile mew-w3m.el and
	mew-shimbun.el if there is only the official Mew XEmacs package that is
	extremely old.

	* w3m-proc.el: Update the way to suppress compile warning for gensym.

	* w3m-util.el (w3m-list-buffers): Check if w3m-fb-mode is bound.

	* w3m.el (w3m-copy-buffer, w3m-mouse-major-mode-menu): Remove unused
	let-bound variables.

2007-10-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install-lisp): Don't install w3m-ems.el for XEmacs and
	w3m-xmas.el for GNU Emacs.

2007-10-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* *, doc/*: Fix expressions of the copyright notices.

	* w3mhack.el (w3mhack-makeinfo): Don't split Info file to pieces.

	* doc/emacs-w3m.texi, doc/emacs-w3m-ja.texi: Use @copying and